# attaparse

./: .gitignore  README.md  pyproject.toml
src/attaparse/: __init__.py  depparse.py
